<resources>
    <string name="app_name">StudyConnect</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="button">Button</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="register_now">register now</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="user_name">user name</string>
    <string name="password_again">password again</string>
    <string name="title_activity_dashboard">dashboard</string>
</resources>